--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -8,39 +8,46 @@ RUN apt-get update && \
     apt-get install -y wget curl unzip tar vim && \
     rm -rf /var/lib/apt/lists/*
 
-ARG MXBUILD_URL=https://cdn.mendix.com/runtime/mxbuild-9.24.40.80973.tar.gz
-ARG MXBUILD_PATH=/opt/mxbuild
+ARG JAVA_JDK_SOURCE_PATH=.
+ARG JAVA_JDK_SOURCE_NAME=jdk-21_linux-x64_bin.deb
 ARG MXDOCKER_SOURCE_PATH=../../
+ARG MXBUILD_SOURCE_HOST=https://cdn.mendix.com/runtime
+ARG MXBUILD_SOURCE_FILE=mxbuild-9.24.40.80973.tar.gz
+
+ARG MXBUILD_PATH=/opt/mxbuild
 ARG MXDOCKER_PATH=/opt/mxdocker
-ARG JAVA_JDK_PATH=.
-ARG JAVA_JDK_BIN_DEB=jdk-21_linux-x64_bin.deb
 ARG JAVA_HOME_PATH=/usr/lib/jvm/jdk-21.0.9-oracle-x64/
+ARG PROJECT_PATH=/opt/source
+ARG PROJECT_NAME=SampleApp.mpr
 ARG USER_UID=1001
-ARG SOURCE_PATH=/opt/source
 
 # Check variable
 RUN echo "PACKAGE_BASE_IMAGE: ${PACKAGE_BASE_IMAGE}" && \
-    echo "SOURCE_PATH: ${SOURCE_PATH}" && \
-    echo "MXBUILD_URL: ${MXBUILD_URL}" && \
+    echo "JAVA_JDK_SOURCE_PATH: ${JAVA_JDK_SOURCE_PATH}" && \
+    echo "JAVA_JDK_SOURCE_NAME: ${JAVA_JDK_SOURCE_NAME}" && \
+    echo "MXDOCKER_SOURCE_PATH: ${MXDOCKER_SOURCE_PATH}" && \
+    echo "MXDOCKER_SOURCE_PATH: ${MXDOCKER_SOURCE_PATH}" && \
+    echo "MXBUILD_SOURCE_URL: ${MXBUILD_SOURCE_HOST}/${MXBUILD_SOURCE_FILE}" && \
     echo "MXBUILD_PATH: ${MXBUILD_PATH}" && \
-    echo "JAVA_JDK_PATH: ${JAVA_JDK_PATH}" && \
-    echo "JAVA_JDK_BIN_DEB: ${JAVA_JDK_BIN_DEB}" && \
+    echo "MXDOCKER_PATH: ${MXDOCKER_PATH}" && \
     echo "JAVA_HOME_PATH: ${JAVA_HOME_PATH}" && \
+    echo "PROJECT_PATH: ${PROJECT_PATH}" && \
+    echo "PROJECT_NAME: ${PROJECT_NAME}" && \
     echo "USER_UID: ${USER_UID}"
 
 # Install JDK
 WORKDIR /tmp
-COPY ${JAVA_JDK_PATH}/${JAVA_JDK_BIN_DEB} ./
-RUN dpkg -i ./${JAVA_JDK_BIN_DEB}
+COPY ${JAVA_JDK_SOURCE_PATH}/${JAVA_JDK_SOURCE_NAME} ./
+RUN dpkg -i ./${JAVA_JDK_SOURCE_NAME}
 RUN ${JAVA_HOME_PATH}/bin/java --version
-RUN rm -rf ./${JAVA_JDK_BIN_DEB}
+RUN rm -rf ./${JAVA_JDK_SOURCE_NAME}
 
 # Download mxbuild kit
 RUN mkdir -p ${MXBUILD_PATH} && \
     cd ${MXBUILD_PATH} && \
-    curl -LJO ${MXBUILD_URL} && \
-    tar -zxvf mxbuild-9.24.40.80973.tar.gz &&\
-    rm -rf mxbuild-9.24.40.80973.tar.gz
+    curl -LJO ${MXBUILD_SOURCE_HOST}/${MXBUILD_SOURCE_FILE} && \
+    tar -zxvf ${MXBUILD_SOURCE_FILE} &&\
+    rm -rf ${MXBUILD_SOURCE_FILE}
 
 # Make MX Docker Patch
 RUN mkdir -p ${MXDOCKER_PATH}
