--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -69,4 +69,4 @@ USER ${USER_UID}
 VOLUME ${PROJECT_PATH}
 ENV PROJECT_NAME="${PROJECT_FILENAME}"
 
-ENTRYPOINT ["${MXBUILD_PATH}/start"]
+ENTRYPOINT ["bash"]
