--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -54,7 +54,7 @@ WORKDIR ${MXDOCKER_PATH}
 COPY ${MXDOCKER_SOURCE_PATH}/ ./
 RUN ls -la
 
-RUN echo '${MXBUILD_PATH}/modeler/mxbuild --java-home="${JAVA_HOME_PATH}" --java-exe-path="${JAVA_HOME_PATH}/bin/java" ${PROJECT_PATH}/*.mpr && mkdir -p ${MXDOCKER_PATH}/build && copy -r ${PROJECT_PATH}/deployment/* ${MXDOCKER_PATH}/build/' > /build-start
+RUN echo '${MXBUILD_PATH}/modeler/mxbuild --java-home="${JAVA_HOME_PATH}" --java-exe-path="${JAVA_HOME_PATH}/bin/java" ${PROJECT_PATH}/*.mpr && mkdir -p ${MXDOCKER_PATH}/build && copy -r ${PROJECT_PATH}/deployment/* ${MXDOCKER_PATH}/build/' > /build-start && cat /build-start 
 
 RUN chmod +x build-start
 #RUN chown -R ${USER_UID}:0 ${MXBUILD_PATH} && chmod -R g=u ${MXBUILD_PATH}
